gpu/command_buffer/service/memory_program_cache.h
@@ -26,7 +26,8 @@ namespace gles2 {
 class GPU_EXPORT MemoryProgramCache : public ProgramCache {
  public:
   MemoryProgramCache(size_t max_cache_size_bytes,
-                     bool disable_gpu_shader_disk_cache);
+                     bool disable_gpu_shader_disk_cache,
+                     bool disable_program_caching_for_transform_feedback);
   ~MemoryProgramCache() override;
 
   ProgramLoadResult LoadLinkedProgram(
@@ -164,6 +165,7 @@ class GPU_EXPORT MemoryProgramCache : public ProgramCache {
 
   const size_t max_size_bytes_;
   const bool disable_gpu_shader_disk_cache_;
+  const bool disable_program_caching_for_transform_feedback_;
   size_t curr_size_bytes_;
   ProgramMRUCache store_;
 
